--- a/23/starbuzz/starbuzz.css
+++ b/23/starbuzz/starbuzz.css
@@ -25,6 +25,10 @@ body {
   margin:           0px 10px 10px 10px;
   width:            280px;
   float:            right;
+  position:         absolute;
+  top:              100px;
+  right:            200px;
+  width:            280px;
 }
 
 .footer {
@@ -34,7 +38,7 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
-  clear: right;
+  clear:            right;
 }
 
 h1 {
@@ -61,9 +65,9 @@ a:visited {
 }
 .allcontent{
   
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top:      5px;
+  padding-bottom:   5px;
   background-color: #675c47;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left:      auto;
+  margin-right:     auto;
 }
