--- a/23/starbuzz/starbuzz.css
+++ b/23/starbuzz/starbuzz.css
@@ -69,11 +69,43 @@ a:visited {
   margin-right:     auto;
 }
 
-.sidebar{
-  position:         absolute;
-  top:              100px;
-  right:            200px;
-  width:            280px;
-  z-index: 100;
+.main{
+  position:         relative;
+  top:              0px;
+  left:             200px;
 }
+
+.grandparent {
+  position:         relative;
+  width:            50vw;
+  height:           50vw;
+  padding:          10px;
+  position:         relative;
+  background-color: dimgray;
+}
+.parent {
+  position: relative;
+  width:            30vw;
+  height:           20vw;
+  margin:           30px 10px;
+  background-color: lightsteelblue;
+  /* 为什么要给边框 */
+  border:           thin solid lightsteelblue;
+}
+.child {
+  width:            10vw;
+  height:           5vw;
+  margin:           5px;
+  padding:          5px;
+  background-color: navy;
+  color:            white;
+}
+
+.move{
+  position: absolute;
+  top: -20px;
+  left: 20px;
+}
+
+
 
