--- a/25/starbuzz/starbuzz.css
+++ b/25/starbuzz/starbuzz.css
@@ -15,7 +15,9 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 330px 10px 10px;
+  margin:           0px 10px 10px 10px;
+  display:          table-cell;
+  vertical-align:   top;
 }
 
 .sidebar {
@@ -23,9 +25,8 @@ body {
   font-size:        105%;
   padding:          15px;
   margin:           0px 10px 10px 10px;
-  width:            280px;
-  float:            right;
-  
+  display:          table-cell;
+  vertical-align:   top;
 }
 
 .footer {
@@ -35,7 +36,6 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
-  clear:            right;
 }
 
 h1 {
@@ -43,7 +43,7 @@ h1 {
   color:            #954b4b;
 }
 
-.slogan { color:    #954b4b; }
+.slogan { color: #954b4b; }
 
 .beanheading {
   text-align:       center;
@@ -60,52 +60,14 @@ a:visited {
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
 }
-.allcontent{
-  
-  padding-top:      5px;
-  padding-bottom:   5px;
-  background-color: #675c47;
-  margin-left:      auto;
-  margin-right:     auto;
+
+div.tableContainer {
+  display:          table;
+  border-spacing:   10px;
 }
 
-.main{
-  position:         relative;
-  top:              0px;
-  left:             200px;
+div.talbeRow {
+  display:          table-row;
 }
-
-.grandparent {
-  position:         relative;
-  width:            50vw;
-  height:           50vw;
-  padding:          10px;
-  position:         relative;
-  background-color: dimgray;
-}
-.parent {
-  position:         relative;
-  width:            30vw;
-  height:           20vw;
-  margin:           30px 10px;
-  background-color: lightsteelblue;
-  /* 为什么要给边框 */
-  border:           thin solid lightsteelblue;
-}
-.child {
-  width:            10vw;
-  height:           5vw;
-  margin:           5px;
-  padding:          5px;
-  background-color: navy;
-  color:            white;
-}
-
-.move{
-  position:         absolute;
-  top:              -20px;
-  left:             20px;
-}
-
 
 
