--- a/25/starbuzz/starbuzz.css
+++ b/25/starbuzz/starbuzz.css
@@ -20,6 +20,14 @@ body {
   vertical-align:   top;
 }
 
+.drinks {
+  background-color: #efe5d0;
+  padding:          15px;
+  margin:           0px 10px 10px 10px;
+  display:          table-cell;
+  vertical-align:   top;
+}
+
 .sidebar {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
