--- a/25/starbuzz/starbuzz.css
+++ b/25/starbuzz/starbuzz.css
@@ -11,6 +11,19 @@ body {
   height:           108px;
 }
 
+.award {
+	position:         absolute;
+	top:              30px;
+	left:             45%;
+}
+
+.coupon {
+	position:         fixed;
+	top:              350px;
+	left:             -210px;
+  transition:       left 0.5s ease;
+}
+
 .main {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
@@ -51,7 +64,7 @@ h1 {
   color:            #954b4b;
 }
 
-.slogan { color: #954b4b; }
+.slogan { color:    #954b4b; }
 
 .beanheading {
   text-align:       center;
@@ -76,6 +89,14 @@ div.tableContainer {
 
 div.talbeRow {
   display:          table-row;
+}
+
+.coupon a, img{
+  border:           none;
+}
+
+.coupon:hover{
+  left:             0px;
 }
 
 
