--- a/25/starbuzz/starbuzz.css
+++ b/25/starbuzz/starbuzz.css
@@ -5,7 +5,7 @@ body {
   margin:           0px;
 }
 
-.header {
+header {
   background-color: #675c47;
   margin:           10px;
   height:           108px;
@@ -24,7 +24,7 @@ body {
   transition:       left 0.5s ease;
 }
 
-.main {
+section.mian,section.blog {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
@@ -41,7 +41,7 @@ body {
   vertical-align:   top;
 }
 
-.sidebar {
+aside {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
@@ -50,7 +50,7 @@ body {
   vertical-align:   top;
 }
 
-.footer {
+footer {
   background-color: #675c47;
   color:            #efe5d0;
   text-align:       center;
@@ -98,5 +98,27 @@ div.talbeRow {
 .coupon:hover{
   left:             0px;
 }
+
+nav ul{
+  margin:           0px;
+  list-style-type:  none;
+  padding:          5px 0px 5px 0px;
+}
+
+ul li{
+  display:          inline;
+  padding:          5px 10px 5px 10px;
+}
+
+ul li a:link,nav ul li a:visited{
+  color:            #954b4b;
+  border-bottom:    none;
+  font-weight:      bold;
+}
+
+ul li.selected{
+  background-color: #c8b99c;
+}
+
 
 
