--- a/qimo/index.css
+++ b/qimo/index.css
@@ -1,5 +1,8 @@
 body{
     background-color: #e5e5e5;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-top: 50px;
 }
 
 .container{
@@ -88,6 +91,7 @@ ul{
     list-style: none;
     padding: 0;
 }
+
 li{
     display: list-item;
     text-align: start;
@@ -97,15 +101,18 @@ li{
     background-color: white;
     border-color: #f0f0f0;
     color: black;
-    border: 1px solid #1d1d1d;
     display: block;
     height: 100%;
     text-decoration: none;
-    transition: width 3s;
+    transform: translate(-50%, -50%) scale(1);
+    left: 50%;
+    top: 50%;
+    transition: transform 0.5s ;
+    position: relative;
 }
 
 .block9:hover{
-    width: 350px;
+    transform: translate(-50%, -50%) scale(1.1);
 }
 
 .block10{
@@ -135,6 +142,8 @@ a{
     font-size: 1.2222222222rem;
     line-height: 1.3636363636;
     text-align: left;
+    float: none;
+    font-weight: 700;
 }
 
 h2{
@@ -169,6 +178,7 @@ h3{
     order: -1;
     position: relative;
     text-align: center;
+    float: none;
 }
 
 .block14{
@@ -184,4 +194,17 @@ h3{
     margin: 0;
     max-width: 100%;
     border-style: none;
+}
+
+.block16{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: -11px;
+    margin-top: 20px;
+}
+
+.block17{
+    display: flex;
+    justify-content: center;
 }
