--- a/qimo/index.css
+++ b/qimo/index.css
@@ -45,12 +45,45 @@ body{
 }
 
 .block4{
-    margin-right: auto;
-    
+    margin-left: 50px;
+    left: calc(-50vw + 50%);
+    margin-top: 0;
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    cursor: default;
+    margin-right: 10px;
+    background: none;
+    border: 0;
+    line-height: 0;
+    padding: 0;
+    display: inline-block;
+    vertical-align: middle;
+    width: auto;
+    text-transform: none;
+    overflow: visible;
+    font-size: 100%;
 }
+
 .block5{ 
-    margin-left: auto;
-    
+    margin-right: 50px;
+    right: calc(-50vw + 50%);
+    margin-top: 0;
+    top: 50%;
+    z-index: 1;
+    position: absolute;
+    margin-left: 10px;
+    background: none;
+    border: 0;
+    cursor: pointer;
+    line-height: 0;
+    padding: 0;
+    display: inline-block;
+    vertical-align: middle;
+    width: auto;
+    text-transform: none;
+    overflow: visible;
+    font-size: 100%;
 }
 
 .block6{
@@ -242,4 +275,20 @@ h3{
 
 .block19:hover{
     transform: translate(0, 0) scale(1.2);
+}
+
+.block20{
+    fill: #000;
+    stroke: #ffff;
+    opacity: 0.6;
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    transform: rotateY(180deg);
+}
+
+.block21{
+    height: 50px;
+    width: 50px;
+    display: inline-block;
 }
