--- a/qimo/index.css
+++ b/qimo/index.css
@@ -1,9 +1,10 @@
-body{
+.body{
     background-color: #e5e5e5;
     padding-left: 110px;
     padding-right: 110px;
     padding-top: 10px;
     z-index: auto;
+    height: 500px;
 }
 
 .container{
@@ -14,7 +15,7 @@ body{
 
 .block1{
     margin-right: auto;
-    margin-top: 0;
+    margin-top: 10px;
     padding-right: 2rem;
     position: relative;
     float: left;
